--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   "author": "Oriol",
   "license": "ISC",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "joi-objectid": "^4.0.2",
+    "mongoose": "^6.1.1"
   }
 }
